[gd_scene load_steps=10 format=3 uid="uid://yol8r7f7ng7n"]

[ext_resource type="Script" uid="uid://cuvr25iwd3qpo" path="res://projectiles/bullet/bullet.gd" id="1_hwob3"]
[ext_resource type="AudioStream" uid="uid://cq1v7cgw8ngyk" path="res://Audio/tresure/slashParry.wav" id="2_1mdu2"]
[ext_resource type="AudioStream" uid="uid://dtq0aduiy7nn4" path="res://Audio/gunshot.wav" id="3_pofd3"]
[ext_resource type="AudioStream" uid="uid://rfxisnyv0d1i" path="res://Audio/pistol-shot-233473.mp3" id="4_s8i05"]
[ext_resource type="Texture2D" uid="uid://bqubavsk5td7m" path="res://Art/newsprites.png" id="5_pofd3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lv60d"]
radius = 6.0

[sub_resource type="Animation" id="Animation_pofd3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Newsprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(100, 100, 100, 1)]
}

[sub_resource type="Animation" id="Animation_lv60d"]
resource_name = "loop"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Newsprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(3.4822, 0.241484),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(100, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hwob3"]
_data = {
&"RESET": SubResource("Animation_pofd3"),
&"loop": SubResource("Animation_lv60d")
}

[node name="ene_bullet" type="Area2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource("1_hwob3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lv60d")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hwob3")
}
autoplay = "loop"

[node name="shot1" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_pofd3")
bus = &"sfx"

[node name="shot2" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_s8i05")
volume_db = -5.0
pitch_scale = 0.8
bus = &"sfx"

[node name="sfx" type="Node" parent="."]

[node name="reflect" type="AudioStreamPlayer" parent="sfx"]
unique_name_in_owner = true
stream = ExtResource("2_1mdu2")
volume_db = -5.0
bus = &"sfx"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Newsprites" type="Sprite2D" parent="."]
modulate = Color(100, 100, 100, 1)
texture = ExtResource("5_pofd3")
hframes = 3
vframes = 3

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
